<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/parent">

    <Button
        android:id="@+id/pickImageId"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/pickImage"
        app:layout_constraintBottom_toTopOf="@+id/nameId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <ImageView
        android:id="@+id/profileId"
        android:layout_width="143dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pickImageId"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <EditText
        android:id="@+id/nameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameId"
        app:layout_constraintTop_toBottomOf="@+id/nameId" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailId"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <EditText
        android:id="@+id/repasswordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/reenter"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordId"
        app:layout_constraintTop_toBottomOf="@+id/passwordId" />

    <TextView
        android:id="@+id/genderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/gender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/repasswordId"
        app:layout_constraintTop_toBottomOf="@+id/repasswordId"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/countryId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.149" />

    <Spinner
        android:id="@+id/spinnerId"
        android:layout_width="42dp"
        android:layout_height="18dp"
        android:layout_marginEnd="188dp"
        android:entries="@array/countries"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nepalId"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/nepalId"
        android:layout_width="59dp"
        android:layout_height="24dp"
        android:text="@string/nepal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinnerId"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toEndOf="@+id/countryId"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:id="@+id/registerBtnId"
        android:layout_width="146dp"
        android:layout_height="66dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="128dp"
        android:layout_height="153dp"
        android:layout_marginTop="64dp"
        android:hint="@string/agreement"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickImageId" />

    <CheckBox
        android:id="@+id/agreeCheckBoxId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/genderId"
        app:layout_constraintTop_toBottomOf="@+id/genderId">


        <RadioButton
            android:id="@+id/maleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="545dp" />

        <RadioButton
            android:id="@+id/femaleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="545dp" />

        <RadioButton
            android:id="@+id/bothId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both"
            tools:layout_editor_absoluteX="295dp"
            tools:layout_editor_absoluteY="545dp" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="a"
        android:textColor="#C62828"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileId" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#C62828"
        android:text="Enter your email"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/emailId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameId"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="c"
        android:textColor="#C62828"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/passwordId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#C62828"
        android:visibility="gone"
        android:text="d"
        app:layout_constraintBottom_toTopOf="@+id/repasswordId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordId"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
